--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ exclude: [ README.md, .gitignore]
 # Theme customization - please change from the defaults!
 theme:
   # Color for top bar, links, etc
-  highlight_color: '#e6801a'
+  highlight_color: '#006400'
 
   # Profile links on the left sidebar, leave blank to ignore
   social:
