--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ pygments: true
 url: cedced19.github.io
 lsi: false
 exclude: [ README.md, .gitignore]
+markdown: kramdown
 
 # Theme customization - please change from the defaults!
 theme:
