--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ url: cedced19.github.io
 lsi: false
 exclude: [ README.md]
 markdown: kramdown
-permalink: /blog/:title/
+permalink: /blog/:year/:title/
