--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ node_modules/
 .tmp/
 presentation/why-bespoke/scripts/main.js
 presentation/why-bespoke/styles/main.css
+demo/birthday-page/img/Thumbs.db
