--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-usemin": "^2.2.0",
     "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-concat": "^0.5.0"
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-shell": "^1.0.1"
   },
   "author": {
     "name": "Cédric",
