--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "grunt-usemin": "^2.2.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-shell": "^1.0.1"
+    "grunt-shell": "^1.0.1",
+    "grunt-uncss": "^0.3.6"
   },
   "author": {
     "name": "Cédric",
