--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-shell": "^1.0.1",
-    "grunt-uncss": "^0.3.6"
+    "grunt-uncss": "^0.3.6",
+    "grunt-autoprefixer": "^1.0.1"
   },
   "author": {
     "name": "Cédric",
