--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-shell": "^1.0.1",
     "grunt-uncss": "^0.3.6",
-    "grunt-autoprefixer": "^1.0.1"
+    "grunt-autoprefixer": "^1.0.1",
+    "time-grunt": "^1.0.0"
   },
   "author": {
     "name": "Cédric",
