--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Cedced19's site",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-autoprefixer": "^2.2.0",
+    "grunt-autoprefixer": "^3.0.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-uglify": "^0.8.0",
-    "grunt-uncss": "^0.3.6",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-uncss": "~0.3.6",
     "grunt-usemin": "^3.0.0",
     "matchdep": "~0.3.0",
     "time-grunt": "^1.0.0"
