--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "cedced19.github.io",
-  "version": "0.0.1",
-  "description": "Cedced19's site",
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-autoprefixer": "^3.0.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-uncss": "~0.3.6",
-    "grunt-usemin": "^3.0.0",
-    "matchdep": "~0.3.0",
-    "time-grunt": "^1.0.0"
-  },
-  "author": {
-    "name": "Cédric",
-    "email": "cedced19@gmail.com",
-    "url": "https://github.com/cedced19"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://cedced19.github.io/license/"
-    }
-  ]
+    "name": "cedced19.github.io",
+    "version": "0.0.1",
+    "description": "Cedced19's site",
+    "devDependencies": {
+        "gulp": "^3.8.10",
+        "gulp-htmlmin": "^1.1.1",
+        "gulp-if": "^1.2.5",
+        "gulp-minify-css": "^1.1.1",
+        "gulp-uglify": "^1.2.0",
+        "gulp-useref": "^1.1.2",
+        "gulp-util": "^3.0.2",
+        "gulp-autoprefixer": "^2.3.1"
+    },
+    "author": {
+        "name": "Cédric",
+        "email": "cedced19@gmail.com",
+        "url": "https://github.com/cedced19"
+    },
+    "licenses": [
+        {
+            "type": "MIT",
+            "url": "http://cedced19.github.io/license/"
+        }
+    ]
 }
