--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "devDependencies": {
         "gulp": "^3.8.10",
         "gulp-htmlmin": "^1.1.1",
-        "gulp-if": "^1.2.5",
+        "gulp-if": "2.0.0",
         "gulp-minify-css": "^1.1.1",
         "gulp-uglify": "^1.2.0",
         "gulp-useref": "^1.1.2",
         "gulp-util": "^3.0.2",
-        "gulp-autoprefixer": "^2.3.1"
+        "gulp-autoprefixer": "^3.1.0"
     },
     "author": {
         "name": "Cédric",
