Update SEO files, change order of the list, change nodesetup script, add a shortcut to gulp task

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "email": "cedced19@gmail.com",
         "url": "https://github.com/cedced19"
     },
+    "scripts": {
+      "build": "gulp"
+    },
     "licenses": [
         {
             "type": "MIT",
