--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-    "name": "cedced19.github.io",
-    "version": "0.0.1",
-    "description": "Cedced19's site",
-    "devDependencies": {
-        "gulp": "^3.8.10",
-        "gulp-htmlmin": "^1.1.1",
-        "gulp-if": "2.0.0",
-        "gulp-minify-css": "^1.1.1",
-        "gulp-uglify": "^1.2.0",
-        "gulp-useref": "^1.1.2",
-        "gulp-util": "^3.0.2",
-        "gulp-autoprefixer": "^3.1.0"
-    },
-    "author": {
-        "name": "Cédric",
-        "email": "cedced19@gmail.com",
-        "url": "https://github.com/cedced19"
-    },
-    "scripts": {
-      "build": "gulp"
-    },
-    "licenses": [
-        {
-            "type": "MIT",
-            "url": "http://cedced19.github.io/license/"
-        }
-    ]
+  "name": "cedced19.github.io",
+  "version": "0.0.1",
+  "description": "Cedced19's site",
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-connect": "^3.2.1",
+    "gulp-htmlmin": "^1.1.1",
+    "gulp-if": "2.0.0",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-useref": "^1.1.2",
+    "gulp-util": "^3.0.2",
+    "opn": "^4.0.1"
+  },
+  "author": {
+    "name": "Cédric",
+    "email": "cedced19@gmail.com",
+    "url": "https://github.com/cedced19"
+  },
+  "scripts": {
+    "build": "gulp",
+    "serve": "gulp serve"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://cedced19.github.io/license/"
+    }
+  ]
 }
