Update main page

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ keywords:
   fr: Cédric, JUNG, Developpeur, Node, JS, HTML, CSS, JavaScript, Vosges, Phalsbourg, Vélo, VTT, Cyclisme
 
 footer_description:
-  en:  "I share my passions: coding, walking in the forest, running and cross-country cycling."
-  fr:  "Je partage mes passions: coder, marcher en forêt, courrir et faire du VTT."
+  en:  "I love coding, walking in the forest, running and cross-country cycling."
+  fr:  "J'adore coder, marcher en forêt, courrir et faire du VTT."
 
 title: Cédric JUNG
 author: Cédric JUNG
