--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/cedced19/cedced19.github.io.git"
   },
   "scripts": {
-    "build": "bundle exec jekyll build && bs --branch master --directory _site --no-yarn --no-cleanup --any-branch",
+    "build": "bundle exec jekyll build && gh-pages -d _site -b master",
     "start": "bundle exec jekyll serve --trace",
     "add-plugin": "bundle update"
   },
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/cedced19/cedced19.github.io/issues"
   },
-  "homepage": "https://github.com/cedced19/cedced19.github.io#readme"
+  "homepage": "https://github.com/cedced19/cedced19.github.io#readme",
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
+  }
 }
