--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/cedced19/cedced19.github.io/issues"
   },
-  "homepage": "https://github.com/cedced19/cedced19.github.io#readme"
+  "homepage": "https://github.com/cedced19/cedced19.github.io#readme",
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
+  }
 }
