--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/cedced19/cedced19.github.io.git"
   },
   "scripts": {
-    "build": "bundle exec jekyll build && gh-pages -d _site -b master",
+    "build": "bundle exec jekyll build && minify ./_assets/css/main.css  > ./_site/assets/main.css && gh-pages -d _site -b master",
     "start": "bundle exec jekyll serve --trace",
     "add-plugin": "bundle update"
   },
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cedced19/cedced19.github.io#readme",
   "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^1.2.0",
+    "minify": "^6.0.1"
   }
 }
