--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "git+https://github.com/cedced19/cedced19.github.io.git"
   },
   "scripts": {
-    "build": "bundle exec jekyll build && minify ./_assets/css/main.css  > ./_site/assets/main.css && gh-pages -d _site -b master",
+    "build": "bundle exec jekyll build && minify ./assets/main.css  > ./_site/assets/main.css",
+    "publish": "npm run build && gh-pages -d _site -b master",
     "start": "bundle exec jekyll serve --trace",
     "add-plugin": "bundle update"
   },
